deployment/Deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prd-streetcroquet-deployment
  namespace: streetcrocketprd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prd-streetcroquet-app
      version: v1
  template:
    metadata:
      labels:
        app: prd-streetcroquet-app
        version: v1
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      serviceAccountName: sa
      imagePullSecrets:
      - name: acr-pull
      containers:
      - name: streetcroquetdk-pod
        image: tgclzdevacr.azurecr.io/streetcroquetdk:c1150526d26fa914a093d0875fd24a56987cc02e
        ports:
        - containerPort: 80
