deployment/Service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: prd-streetcroquet-svc
  namespace: streetcrocketprd
spec:
  selector:
    app: prd-streetcroquet-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
