deployment/HttpRoute-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prd-streetcroquet-httproute
  namespace: streetcrocketprd
spec:
  parentRefs:
    - name: gateway
      namespace: gatewayapi
      sectionName: streetcrocket-https-prd
  hostnames:
    - streetcrocket.com
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: prd-streetcroquet-svc
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
